# ME5406_project

./: .gitignore  README.md  SUBMISSION_CHECKLIST.md  environment.yml  evaluate.py  pyproject.toml  requirements.txt  resume_train.py  train.py  visualize.py
artifacts/archive/ur5e_obs3_20260421_2153/: ARCHIVE_SUMMARY.md
artifacts/archive/ur5e_obs5_20260422_0042/: ARCHIVE_SUMMARY.md
artifacts/archive/ur5e_obs5_20260422_0042/config/: obstacle_avoidance_env.py
artifacts/archive/ur5e_obs5_20260422_0042/results/: eval_ur5e_obs5.json
artifacts/results/: eval_obs1.json  eval_ur5e_obs3.json  ik_obs1.json  ik_obs3.json  ik_obs5.json  rrt_obs1.json  rrt_obs3.json  rrt_obs5.json  sac_obs1.json  sac_obs3.json  sac_obs5.json  summary.csv
docs/: report_outline.md  video_checklist.md
scripts/: run_experiment_suite.py  visualize_workspace.py
src/: baselines.py  evaluation.py  policies.py  training.py
src/assets/: arm_3dof.xml
src/envs/: obstacle_avoidance_env.py
